# API_Cpp

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  libsofa.pc.cmake  params.json
doc/: libsofa.changelog.txt
doc/doxygen/: sofa_api.doxyfile
libsofa/: CMakeLists.txt  README.md
libsofa/dependencies/: sofa_build_dependencies_linux.sh  sofa_build_dependencies_linux_2016.sh  sofa_build_dependencies_osx.sh  sofa_build_dependencies_osx_2017.sh
libsofa/dependencies/include/: H5pubconf.h  netcdf_meta.h
libsofa/dependencies/lib/win/: libcurl_imp.lib  libcurl_imp_x64.lib  libhdf5_hl.lib  libhdf5_hl_x64.lib  netcdf.lib  netcdf_x64.lib  zlib.lib  zlib_x64.lib
libsofa/dependencies/lib/win/i386/: libnetcdf.settings
libsofa/dependencies/lib/win/x64/: libnetcdf.settings
libsofa/doc/: LICENCE.txt  README.txt  libsofa.changelog.txt
libsofa/doc/doxygen/: sofa_api.doxyfile
libsofa/lib/: sofamisc
libsofa/src/: SOFA.h  SOFAAPI.cpp  SOFAAPI.h  SOFAAttributes.cpp  SOFAAttributes.h  SOFACoordinates.cpp  SOFACoordinates.h  SOFADate.cpp  SOFADate.h  SOFAEmitter.cpp  SOFAEmitter.h  SOFAExceptions.cpp  SOFAExceptions.h  SOFAFile.cpp  SOFAFile.h  SOFAGeneralFIR.cpp  SOFAGeneralFIR.h  SOFAGeneralFIRE.cpp  SOFAGeneralFIRE.h  SOFAGeneralTF.cpp  SOFAGeneralTF.h  SOFAHelper.cpp  SOFAHelper.h  SOFAHostArchitecture.h  SOFAListener.cpp  SOFAListener.h  SOFAMultiSpeakerBRIR.h  SOFANcFile.cpp  SOFANcFile.h  SOFANcUtils.h  SOFAPlatform.h  SOFAPoint3.cpp  SOFAPoint3.h  SOFAPosition.cpp  SOFAPosition.h  SOFAReceiver.cpp  SOFAReceiver.h  SOFASimpleFreeFieldHRIR.cpp  SOFASimpleFreeFieldHRIR.h  SOFASimpleFreeFieldSOS.cpp  (+15 more)
src/: CMakeLists.txt  SOFA.h  SOFAAPI.cpp  SOFAAPI.h  SOFAAttributes.cpp  SOFAAttributes.h  SOFACoordinates.cpp  SOFACoordinates.h  SOFADate.cpp  SOFADate.h  SOFAEmitter.cpp  SOFAEmitter.h  SOFAExceptions.cpp  SOFAExceptions.h  SOFAFile.cpp  SOFAFile.h  SOFAGeneralFIR.cpp  SOFAGeneralFIR.h  SOFAGeneralFIRE.cpp  SOFAGeneralFIRE.h  SOFAGeneralTF.cpp  SOFAGeneralTF.h  SOFAHelper.cpp  SOFAHelper.h  SOFAHostArchitecture.h  SOFAListener.cpp  SOFAListener.h  SOFAMultiSpeakerBRIR.cpp  SOFAMultiSpeakerBRIR.h  SOFANcFile.cpp  SOFANcFile.h  SOFANcUtils.h  SOFAPlatform.h  SOFAPoint3.cpp  SOFAPoint3.h  SOFAPosition.cpp  SOFAPosition.h  SOFAReceiver.cpp  SOFAReceiver.h  SOFASimpleFreeFieldHRIR.cpp  (+20 more)
tests/: compare.sh
windows/: libsofa.sln
